--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "name": "nativecode (profile mode)",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "profile"
+            "flutterMode": "profile",
         },
         {
             "type": "android",
@@ -24,6 +24,13 @@
             "appSrcRoot": "${workspaceRoot}/android/app/src/main",
             "apkFile": "${workspaceRoot}/build/app/outputs/apk/debug/app-debug.apk",
             "adbPort": 5037
+        },
+        {
+            "type": "android",
+            "request": "launch",
+            "name": "App Build & Launch",
+            "preLaunchTask": "run gradle",
+            //...
         },
         {
             // configuration type, request  and name. "launch" is used to deploy the app
