--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,18 +20,23 @@
         {
             "type": "android",
             "request": "launch",
+            "name": "App Build & Launch",
+            "appSrcRoot": "${workspaceRoot}/android/app/src/main",
+            "apkFile": "${workspaceRoot}/build/app/outputs/apk/debug/app-debug.apk",
+            "preLaunchTask": "run gradle",
+            "autoStartADB": true,
+            "adbSocket": "localhost:5037",
+            //...
+        },
+        {
+            "type": "android",
+            "request": "launch",
             "name": "Android Launch",
             "appSrcRoot": "${workspaceRoot}/android/app/src/main",
             "apkFile": "${workspaceRoot}/build/app/outputs/apk/debug/app-debug.apk",
             "adbPort": 5037
         },
-        {
-            "type": "android",
-            "request": "launch",
-            "name": "App Build & Launch",
-            "preLaunchTask": "run gradle",
-            //...
-        },
+       
         {
             // configuration type, request  and name. "launch" is used to deploy the app
             // to your device and start a debugging session.
