--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
             "name": "Android Launch",
             "type": "android",
             "request": "launch",
-            "appSrcRoot": "${workspaceRoot}/android/app/src/main",
+            "appSrcRoot": "${workspaceRoot}/app/src/main",
             "apkFile": "${workspaceRoot}/app/build/outputs/apk/debug/app-debug.apk",
             "adbPort": 5037
         },
@@ -33,9 +33,9 @@
             "request": "launch",
             // Location of the App source files. This value must point to the root of
             // your App source tree (containing AndroidManifest.xml).
-            "appSrcRoot": "${workspaceRoot}/android/app/src/main",
+            "appSrcRoot": "${workspaceRoot}/app/src/main",
             // Fully qualified path to the built APK (Android Application Package).
-            "apkFile": "${workspaceRoot}/build/app/outputs/apk/debug/app-debug.apk",
+            "apkFile": "${workspaceRoot}/app/build/outputs/apk/debug/app-debug.apk",
             // `host:port` configuration for connecting to the ADB (Android Debug Bridge) server instance.
             // Default: localhost:5037
             "adbSocket": "localhost:5037",
@@ -51,7 +51,7 @@
             "targetDevice": "",
             // Fully qualified path to the AndroidManifest.xml file compiled into the APK.
             // Default: "${appSrcRoot}/AndroidManifest.xml"
-            "manifestFile": "${workspaceRoot}/android/app/src/main/AndroidManifest.xml",
+            "manifestFile": "${workspaceRoot}/app/src/main/AndroidManifest.xml",
             // Custom arguments passed to the Android package manager to install the app.
             // Run 'adb shell pm' to show valid arguments. Default: ["-r"]
             "pmInstallArgs": [
