--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,30 +10,18 @@
     <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"/>
     -->
 
-    <application
-        android:allowBackup="true"
+   <application android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <receiver android:name=".PhoneCallReceiver">
-            <intent-filter>
-                <action android:name="jp.co.acesystems.callreceiver.MY_BROADCAST"/>
-                <action android:name="android.intent.action.PHONE_STATE" />
-                <action android:name="android.intent.action.CALL_LOG" />
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
